Changed Submission to return category Id instead of category name

--- a/src/Leaf.Web/Views/Submit/New.cshtml
+++ b/src/Leaf.Web/Views/Submit/New.cshtml
@@ -17,7 +17,7 @@
         <div class="form-group">
             <label class="control-label col-md-2">Категория: </label>
             <div class="col-md-10">
-                @Html.DropDownListFor(m => m.CategoryName, Model.Categories)
+                @Html.DropDownListFor(m => m.CategoryId, Model.Categories)
             </div>
         </div>
 
