Changed CreateSubmission to HttpPost New

--- a/src/Leaf.Web/Views/Submit/New.cshtml
+++ b/src/Leaf.Web/Views/Submit/New.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Ново въпрос</h2>
 
-@using (Html.BeginForm("CreateSubmission", "Submit"))
+@using (Html.BeginForm("New", "Submit"))
 {
     @Html.AntiForgeryToken()
 
