--- a/src/Leaf.Web/Views/Submit/New.cshtml
+++ b/src/Leaf.Web/Views/Submit/New.cshtml
@@ -1,14 +1,12 @@
 ﻿@model Leaf.Web.Models.Submit.NewSubmitViewModel
 
-@{
-    ViewBag.Title = "New submission";
-}
-
 <h2>Ново въпрос</h2>
 
 @using (Html.BeginForm("New", "Submit"))
 {
     @Html.AntiForgeryToken()
+
+    Model.IncorrectAnswers = new List<string> { "", "", "" };
 
     <div class="form-horizontal">
         <hr />
@@ -40,27 +38,27 @@
         <div class="form-group">
             <label class="control-label col-md-2">Грешен отговор: </label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.IncorrectAnswerOne, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.IncorrectAnswerOne, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.IncorrectAnswers[0], new { htmlAttributes = new { @class = "form-control" } })
+                @*@Html.ValidationMessageFor(model => model.Answers[0], "", new { @class = "text-danger" })*@
             </div>
         </div>
 
         <div class="form-group">
             <label class="control-label col-md-2">Грешен отговор: </label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.IncorrectAnswerTwo, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.IncorrectAnswerTwo, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.IncorrectAnswers[1], new { htmlAttributes = new { @class = "form-control" } })
+                @*@Html.ValidationMessageFor(model => model.Answers, "", new { @class = "text-danger" })*@
             </div>
         </div>
 
         <div class="form-group">
             <label class="control-label col-md-2">Грешен отговор: </label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.IncorrectAnswerThree, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.IncorrectAnswerThree, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.IncorrectAnswers[2], new { htmlAttributes = new { @class = "form-control" } })
+                @*@Html.ValidationMessageFor(model => model.Answers, "", new { @class = "text-danger" })*@
             </div>
         </div>
-
+        
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Submit" class="btn btn-default" />
