--- a/src/Leaf.Web/Views/Submit/Submission.cshtml
+++ b/src/Leaf.Web/Views/Submit/Submission.cshtml
@@ -8,7 +8,7 @@
 
 <p>@Model.Condition</p>
 <p>@Model.CorrectAnswer</p>
-@foreach (var incorrectAnswer in Model.IncorrectAnswers)
+@foreach (var incorrectAnswer in Model.Answers)
 {
     <p>@incorrectAnswer</p>
 }
